Add customer validation. Update swagger doc.
