# internal/adapters/driver/dto/customer.go
@@ -5,4 +5,4 @@ type CustomerDto struct {
 	Name  string `json:"name"`
 	Email string `json:"email"`
 	CPF   string `json:"cpf"`
-}
+} //@name CustomerDto
