# internal/adapters/driver/http/customer/handler.go
@@ -27,6 +27,15 @@ func (c CustomerHandler) RegisterRoutes(server *echo.Echo) {
 	customerGroupV1.DELETE("/:id", c.Delete)
 }
 
+// GetAll godoc
+// @Summary      List Customers
+// @Description  List All Customers
+// @Tags         Customers
+// @Accept       json
+// @Produce      json
+// @Router       /v1/customer [get]
+// @success 200  {object} domain.Customer
+// @Failure 500 {object} error
 func (h *CustomerHandler) GetAll(echo echo.Context) error {
 	var customers []domain.Customer
 
@@ -39,6 +48,16 @@ func (h *CustomerHandler) GetAll(echo echo.Context) error {
 	return echo.JSON(http.StatusOK, customers)
 }
 
+// Create godoc
+// @Summary      Insert Customer
+// @Description  Insert Customer
+// @Tags         Customers
+// @Accept       json
+// @Produce      json
+// @Param        CustomerToInsert	body dto.CustomerDto true "teste"
+// @Router       /v1/customer [post]
+// @success 200 {array} domain.Customer
+// @Failure 500 {object} error
 func (h *CustomerHandler) Create(echo echo.Context) error {
 	customerDto := dto.CustomerDto{}
 
@@ -48,11 +67,7 @@ func (h *CustomerHandler) Create(echo echo.Context) error {
 		return echo.JSON(http.StatusBadRequest, err.Error())
 	}
 
-	customer, err := h.customerService.Create(domain.Customer{
-		Name:  customerDto.Name,
-		Email: customerDto.Email,
-		CPF:   customerDto.CPF,
-	})
+	customer, err := h.customerService.Create(customerDto)
 
 	if err != nil {
 		return echo.JSON(http.StatusInternalServerError, err.Error())
@@ -61,6 +76,17 @@ func (h *CustomerHandler) Create(echo echo.Context) error {
 	return echo.JSON(http.StatusOK, customer)
 }
 
+// Update godoc
+// @Summary      Update Customer
+// @Description  Update Customer
+// @Tags         Customers
+// @Accept       json
+// @Produce      json
+// @Param		 Id             path int         true "ID do customer"
+// @Param        CustomerToInsert	body dto.CustomerDto true "teste"
+// @Router       /v1/customer/{id} [put]
+// @success 200 {array} domain.Customer
+// @Failure 500 {object} error
 func (h *CustomerHandler) Update(echo echo.Context) error {
 	customerDto := dto.CustomerDto{}
 
@@ -75,11 +101,7 @@ func (h *CustomerHandler) Update(echo echo.Context) error {
 		return echo.JSON(http.StatusBadRequest, err.Error())
 	}
 
-	customer, err := h.customerService.Update(uint32(id), domain.Customer{
-		Name:  customerDto.Name,
-		Email: customerDto.Email,
-		CPF:   customerDto.CPF,
-	})
+	customer, err := h.customerService.Update(uint32(id), customerDto)
 
 	if err != nil {
 		return echo.JSON(http.StatusInternalServerError, err.Error())
@@ -88,6 +110,16 @@ func (h *CustomerHandler) Update(echo echo.Context) error {
 	return echo.JSON(http.StatusOK, customer)
 }
 
+// Delete godoc
+// @Summary      Delete Customer
+// @Description  Delete Customer
+// @Tags         Customers
+// @Accept       json
+// @Produce      json
+// @Param		 Id             path int         true "ID do customer"
+// @Router       /v1/customer/{id} [delete]
+// @success 200 {string}  string    "customer deleted successfully"
+// @Failure 500 {object} error
 func (h *CustomerHandler) Delete(echo echo.Context) error {
 	id, err := strconv.Atoi(echo.Param("id"))
 
@@ -104,6 +136,16 @@ func (h *CustomerHandler) Delete(echo echo.Context) error {
 	return echo.JSON(http.StatusOK, "customer deleted successfully")
 }
 
+// GetByCpf godoc
+// @Summary      Get Customer by CPF
+// @Description  Retrieve a customer by their CPF
+// @Tags         Customers
+// @Accept       json
+// @Produce      json
+// @Param        cpf   path      string  true  "CPF of the customer"
+// @Router       /v1/customer/cpf/{cpf} [get]
+// @Success      200  {object}  domain.Customer
+// @Failure      500  {object}  error
 func (h CustomerHandler) GetByCpf(echo echo.Context) error {
 
 	cpf := echo.Param("cpf")
